# MueveRepartoEnCancun-

./: .cursorrules  .env.example  .gitattributes  .gitignore  AGENTS.md  DEPLOY.md  PR.md  README.md  ROADMAP.md  SECURITY.md  astro.config.mjs  commit_msg.txt  eslint-results.json  eslint.config.js  fix.py  fix_async.py  fix_async2.py  fix_async3.py  fix_csp.py  fix_db.py  fix_pr_comments.py  fix_status.py  my_pre_commit.sh  package.json  patch_i18n.cjs  plan_step_complete.py  pnpm-lock.yaml  pr_description.md  read_pr_comments.py  render.yaml  replace_close_sheet.py  replace_css.py  replace_html.py  replace_init.py  replace_js.py  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  update_routecalc.py
backend/: Cargo.toml  README.md
backend/.sqlx/: query-0be6d4f0f9bdcdadbc47d8410c16fe86e8250e53a60c714da2bea88d31ccf7e3.json  query-272747d7d732ba078c34463ed3d790aa4848b203e4d99acdb9607b8cb5ce9f10.json  query-2accf71ca817a0d52631bb453d06e4ec73a17fcd4eaf66425dd3e36a87efd6b9.json  query-40fa737e6e31ff634398bcfdc24e6ed1c67ab2e6f56267f784521ccba7a37ee7.json  query-47d1cc7ca2a3129c8b291e9a0990361b81bb8e1a60e04b6408380d933560fb21.json  query-4a051845a2f0c8fa81a1dd45c8b888333938c9f5898372937a8e3fd1686bbb4b.json  query-879039010316178b5fb115aea6a2f3ba474dc4b3dcf4cfbfe83d618c2db3cd33.json  query-8c00a435dc216fe3d18a531496950c1b0bd4f7dbd16888aba3f821ec9c6e4dac.json  query-992a5cb57391410aed723ef84f0f3935ff9a225e443c2cd76c2ad1399b375b69.json  query-a0c072d835205aa70e7f2ad8e5e73f9a02d37e63ad122c35eac2bd8d591c2df1.json  query-ae9d1b99d8b34ed87c7947271b0f6d29b68547d970b0976b5f7e1d4daf6ed1eb.json  query-c07c17234f24d6572862a0853c437397c4966fed905f5b2f0a196bb581b48f73.json  query-c1f7b3e7d46ad3a38516724392f428ef41c35827bbdbaed9b4932b2b6bd1a1e4.json  query-cc3c565424ae2c1c9b5543d802e2cf0e5ad22bc39cf825cc8474f2966aaa8c41.json  query-de1dfb21c4cfd54cf4bb99e32747641016a625d0ad01453d077bed5d343088a1.json  query-df934a363f3f6773ab763c3809efdcdca9f9cc537fd5b2077db06b61c368e4b6.json  query-f3aa36ade527b9aa84ea705ad94dc424f394b351ffe4cadc83d7fdd69727f797.json
backend/migrations/: 001_initial.sql  002_auth.sql  003_magic_links.sql
public/: sw.js  (+2 more)
(+168 files in other folders)
