[package]
name        = "mueve-reparto-api"
version     = "0.1.0"
edition     = "2021"

[[bin]]
name = "mueve-reparto-api"
path = "src/main.rs"

[dependencies]
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
sqlx            = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
uuid            = { version = "1",   features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
tower-http      = { version = "0.5", features = ["cors", "trace"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy         = "0.15"
anyhow          = "1"
jsonwebtoken    = "9"
sha2            = "0.10"
rand            = "0.8"
hex             = "0.4"
reqwest         = { version = "0.12", features = ["json"] }
hmac = "0.12"
base64 = "0.22"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true    # Reduce binario ~40%
